--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
     "start": "node node_modules/react-native/local-cli/cli.js start"
   },
   "dependencies": {
+    "express": "^4.14.0",
+    "nodemon": "^1.9.2",
+    "pg": "6.0.2",
     "react": "15.2.1",
-    "react-native": "0.29.1"
+    "react-native": "0.29.1",
+    "sequelize": "^3.23.4"
   }
 }
