--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "express": "^4.14.0",
     "nodemon": "^1.9.2",
     "pg": "6.0.2",
+    "pg-hstore": "^2.3.2",
     "react": "15.2.1",
     "react-native": "0.29.1",
     "sequelize": "^3.23.4"
