--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "deco-ride-share-demo": "^1.1.0",
     "react": "15.2.1",
-    "react-native": "^0.29.1"
+    "react-native": "^0.29.1",
+    "react-native-swipe-cards": "0.0.7"
   }
 }
