--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "node node_modules/react-native/local-cli/cli.js start"
   },
   "dependencies": {
+    "clamp": "^1.0.1",
     "deco-ride-share-demo": "^1.1.0",
     "react": "15.2.1",
     "react-native": "^0.29.1",
